feat: add schema configuration and docker compose
