# docs/swagger.json
@@ -775,71 +775,38 @@
         },
         "model.CreateCar": {
             "type": "object",
-            "required": [
-                "car_name",
-                "day_rate",
-                "image",
-                "month_rate"
-            ],
             "properties": {
                 "car_name": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 8
+                    "type": "string"
                 },
                 "day_rate": {
-                    "type": "number",
-                    "maximum": 1000000,
-                    "minimum": 10000
+                    "type": "number"
                 },
                 "image": {
-                    "type": "string",
-                    "maxLength": 256,
-                    "minLength": 5
+                    "type": "string"
                 },
                 "month_rate": {
-                    "type": "number",
-                    "maximum": 30000000,
-                    "minimum": 250000
+                    "type": "number"
                 }
             }
         },
         "model.CreateOrder": {
             "type": "object",
-            "required": [
-                "car_id",
-                "dropoff_date",
-                "dropoff_lat",
-                "dropoff_location",
-                "dropoff_long",
-                "order_date",
-                "pickup_date",
-                "pickup_lat",
-                "pickup_location",
-                "pickup_long"
-            ],
             "properties": {
                 "car_id": {
-                    "type": "integer",
-                    "minimum": 1
+                    "type": "integer"
                 },
                 "dropoff_date": {
                     "type": "string"
                 },
                 "dropoff_lat": {
-                    "type": "number",
-                    "maximum": 90,
-                    "minimum": -90
+                    "type": "number"
                 },
                 "dropoff_location": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 30
+                    "type": "string"
                 },
                 "dropoff_long": {
-                    "type": "number",
-                    "maximum": 180,
-                    "minimum": -180
+                    "type": "number"
                 },
                 "order_date": {
                     "type": "string",
@@ -850,19 +817,13 @@
                     "example": "2024-02-02T00:00:00Z"
                 },
                 "pickup_lat": {
-                    "type": "number",
-                    "maximum": 90,
-                    "minimum": -90
+                    "type": "number"
                 },
                 "pickup_location": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 30
+                    "type": "string"
                 },
                 "pickup_long": {
-                    "type": "number",
-                    "maximum": 180,
-                    "minimum": -180
+                    "type": "number"
                 }
             }
         },
@@ -1059,72 +1020,39 @@
         },
         "model.UpdateCar": {
             "type": "object",
-            "required": [
-                "car_name",
-                "day_rate",
-                "image",
-                "month_rate"
-            ],
             "properties": {
                 "car_name": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 8
+                    "type": "string"
                 },
                 "day_rate": {
-                    "type": "number",
-                    "maximum": 1000000,
-                    "minimum": 10000
+                    "type": "number"
                 },
                 "image": {
-                    "type": "string",
-                    "maxLength": 256,
-                    "minLength": 5
+                    "type": "string"
                 },
                 "month_rate": {
-                    "type": "number",
-                    "maximum": 30000000,
-                    "minimum": 250000
+                    "type": "number"
                 }
             }
         },
         "model.UpdateOrder": {
             "type": "object",
-            "required": [
-                "car_id",
-                "dropoff_date",
-                "dropoff_lat",
-                "dropoff_location",
-                "dropoff_long",
-                "order_date",
-                "pickup_date",
-                "pickup_lat",
-                "pickup_location",
-                "pickup_long"
-            ],
             "properties": {
                 "car_id": {
-                    "type": "number",
-                    "minimum": 1
+                    "type": "number"
                 },
                 "dropoff_date": {
                     "type": "string",
                     "example": "2024-02-02T00:00:00Z"
                 },
                 "dropoff_lat": {
-                    "type": "number",
-                    "maximum": 90,
-                    "minimum": -90
+                    "type": "number"
                 },
                 "dropoff_location": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 30
+                    "type": "string"
                 },
                 "dropoff_long": {
-                    "type": "number",
-                    "maximum": 180,
-                    "minimum": -180
+                    "type": "number"
                 },
                 "order_date": {
                     "type": "string",
@@ -1135,19 +1063,13 @@
                     "example": "2024-02-02T00:00:00Z"
                 },
                 "pickup_lat": {
-                    "type": "number",
-                    "maximum": 90,
-                    "minimum": -90
+                    "type": "number"
                 },
                 "pickup_location": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 30
+                    "type": "string"
                 },
                 "pickup_long": {
-                    "type": "number",
-                    "maximum": 180,
-                    "minimum": -180
+                    "type": "number"
                 }
             }
         }
